--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import "./styles/globals.css";
 
+html {
+    filter: saturate(1.1) contrast(1.05);
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
